<resources>
    <string name="app_name">KARKINOS</string>
    <string name="check">I have read and agree to the <u>privacy policy</u> &amp;
        <u>terms 0f services</u>, including our <u>Cooking Use</u></string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="verification">Verification Code</string>
    <string name="change">Not Your Number? <u>Change</u></string>
    <string name="resend">OTP Auto resend in 29 sec</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name">സുപ്രഭാതം,</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="health">Health Diary</string>
    <string name="service">My Services</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Ask Karkinos</string>
    <string name="upcoming_events">UPCOMING EVENTS</string>
    <string name="text">Choose the services you wish to avail, or Ask Karkinos</string>
    <string name="search">Search</string>
    <string name="hospitals">Hospitals</string>
    <string name="doctors">Doctors</string>
    <string name="labs">Labs</string>
    <string name="parmaciticals">Parmaciticals</string>
    <string name="medical_shops">Medical Shops</string>
    <string name="date">30</string>
    <string name="date1">27</string>
    <string name="month">OCT</string>
    <string name="month1">NOV</string>
    <string name="time1">  <font color="#000"><b>11.15</b></font>  pm</string>
    <string name="time2">  <font color="#000"><b>12.15</b></font>  pm</string>
    <string name="address">Address: Flat 204, Rajapushpam Palace, Shirdi Sai Road, Seethammadhara, Seethammadhara, Visakhapatnam, Andhra Pradesh 530013</string>
    <string name="designation">MBBS, MD (MRCP) (FRCP) Raditaion oncologist</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
</resources>