<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home4"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/dairy"
            android:title="@string/health" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/serviceicon"
            android:title="@string/service" />
        <item
            android:id="@+id/chat"
            android:icon="@drawable/ask_icon"
            android:title="@string/chat" />

    </group>
</menu>