<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".OTPActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/img"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/name"/>

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification"
        android:layout_below="@+id/img"
        android:layout_marginTop="40dp"
        android:textColor="#807373"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/txt"
        android:layout_margin="30dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        android:layout_centerHorizontal="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"/>


            <com.chaos.view.PinView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:itemCount="4"
                app:itemWidth="50dp"
                app:itemHeight="50dp"
                app:itemSpacing="20dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                app:lineColor="@color/line"
                android:itemBackground="@color/border"
                style="@style/PinWidget.PinView"
                android:inputType="number"
                android:cursorVisible="true"
                app:cursorColor="#0000"
                app:hideLineWhenFilled="true"
                app:itemRadius="15dp"/>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend"
        android:textColor="#807373"
        android:layout_below="@id/card"
        android:layout_centerHorizontal="true"/>


    </RelativeLayout>


</ScrollView>